# Equalizer_Agent

./: .gitignore  README.md
AI_equalizer/: .gitignore  CMakeLists.txt  README.md  build.sh  setup_virtual_sink.sh  start.sh  start_equalizer.sh
AI_equalizer/src/: AudioProcessingThread.cpp  AudioProcessingThread.h  ChatView.cpp  ChatView.h  EqualizerMainWindow.cpp  EqualizerMainWindow.h  EqualizerMainWindow.ui  EqualizerViewModel.cpp  EqualizerViewModel.h  PresetModel.cpp  PresetModel.h  audioprocessor.cpp  audioprocessor.h  equalizerengine.cpp  equalizerengine.h  main.cpp
agent/: .env  agent.py  chat_agent.py  requirements.txt  reset_port.sh  test_set_gains.py
agent/.adk/: session.db
